--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/validator": "^13.6.6",
     "sass": "^1.43.4",
     "typescript": "^4.4.3",
+    "validator": "^13.7.0",
     "vite": "^2.5.7",
     "vite-plugin-solid": "^2.0.3"
   },
