--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/leaflet": "^1.7.5",
     "@types/validator": "^13.6.6",
     "sass": "^1.43.4",
     "typescript": "^4.4.3",
@@ -19,6 +20,7 @@
   },
   "dependencies": {
     "convert-region": "^1.0.7",
+    "leaflet": "^1.7.1",
     "solid-js": "^1.1.3"
   }
 }
