--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^4.0.3",
     "@types/leaflet": "^1.7.5",
     "@types/validator": "^13.6.6",
     "sass": "^1.43.4",
